# bouffalo-cli

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.circleci/: config.yml
.github/workflows/: main.yml  release.yml
bootloader/: Cargo.toml  link.x
bootloader/.cargo/: config
bootloader/src/: main.rs
bouffalo-cli/: Cargo.toml
bouffalo-cli/src/: bl.rs  bl60x.rs  cli.rs  elf_parser.rs  main.rs
bouffalo-cli/src/bl/: firmware.rs
buffalo_flasher/: Cargo.toml
buffalo_flasher/src/: main.rs
docs/: blsp.bt
scripts/: build-and-release.sh  cross-build.sh
src/: bl.rs  bl60x.rs  cli.rs  error.rs  isp.rs  lib.rs  main.rs
src/bl/: bootrom.rs  firmware.rs
