[package]
name = "bouffalo-cli"
description = "BL602 Boot ROM utility"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mkroman/bouffalo-cli"
keywords = ["cli", "embedded", "firmware"]
categories = ["command-line-utilities", "development-tools::build-utils", "embedded"]

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serial = "0.4"
thiserror = "1.0"
structopt = "0.3"
byteorder = "1.3.4"
