[package]
name = "bouffalo-cli"
description = "BL602 Boot ROM utility"
version = "0.0.1"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mkroman/bouffalo-cli"
keywords = ["cli", "embedded", "firmware"]
categories = ["command-line-utilities", "development-tools::build-utils", "embedded"]

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
structopt = "0.3"
byteorder = "1.3.4"
num_enum = "0.5.1"
sha2 = "0.9.2"
serialport = { version = "3.3.0", default-features = false }

[dev-dependencies]
assert_hex = "0.1"
hex-literal = "0.3"

[lib]
name = "bouffalo"
