[package]
name = "bouffalo-cli"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serial = "0.4"
thiserror = "1.0"
clap = "2.33"
